--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-elastic-carousel": "^0.11.5",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^2.1.3",
     "reactstrap": "^9.0.1",
+    "styled-components": "^5.3.3",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
