--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
+    "react-native": "^0.66.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^2.1.3",
     "reactstrap": "^9.0.1",
